section #3 & dont need those other 2 html files now that i am figuring this piecing out

--- a/modules/mobile-technology-overview/index.html
+++ b/modules/mobile-technology-overview/index.html
@@ -4,20 +4,30 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
     <meta name="viewport" content="initial-scale=1">
-	<title>Untitled</title>
+	<title>Mobile Technology Overview</title>
+	<link rel="stylesheet" href="../_common/fonts/stylesheet.css" type="text/css" media="screen" charset="utf-8" />
 <!--Adobe Edge Runtime-->
-    <script type="text/javascript" charset="utf-8" src="edge_includes/Elite_spaceship_Mobile_edgePreload.js"></script>
     <script type="text/javascript" charset="utf-8" src="edge_includes/SixTechnologies_Mobile_edgePreload.js"></script>
+    <script type="text/javascript" charset="utf-8" src="edge_includes/Elite_spaceship_Mobile_edgePreload.js"></script>
+    <script type="text/javascript" charset="utf-8" src="edge_includes/Elite_Battery_Mobile_edgePreload.js"></script>
     <style>
-        .edgeLoad-EDGE-30503229, .edgeLoad-EDGE-15320788 { visibility:hidden; }
+        .edgeLoad-EDGE-30503229, .edgeLoad-EDGE-15320788, .edgeLoad-EDGE-58030357 { visibility:hidden; }
     </style>
 <!--Adobe Edge Runtime End-->
 
 </head>
 <body style="margin:0;padding:0;">
+	<div id="Stage1wrap" class="stagewrapper">
 	<div id="Stage1" class="EDGE-30503229">
 	</div>
+	</div>
+	<div id="Stage2wrap" class="stagewrapper">
 	<div id="Stage2" class="EDGE-15320788">
+	</div>
+	</div>
+	<div id="Stage3wrap" class="stagewrapper">
+	<div id="Stage3" class="EDGE-58030357">
+	</div>
 	</div>
 </body>
 </html>
