adding the header block + last 2 pieces in

--- a/modules/mobile-technology-overview/index.html
+++ b/modules/mobile-technology-overview/index.html
@@ -6,17 +6,25 @@
     <meta name="viewport" content="initial-scale=1">
 	<title>Mobile Technology Overview</title>
 	<link rel="stylesheet" href="../_common/fonts/stylesheet.css" type="text/css" media="screen" charset="utf-8" />
+	<link rel="stylesheet" href="edge_includes/base.css" type="text/css" media="screen" charset="utf-8" />
 <!--Adobe Edge Runtime-->
     <script type="text/javascript" charset="utf-8" src="edge_includes/SixTechnologies_Mobile_edgePreload.js"></script>
     <script type="text/javascript" charset="utf-8" src="edge_includes/Elite_spaceship_Mobile_edgePreload.js"></script>
     <script type="text/javascript" charset="utf-8" src="edge_includes/Elite_Battery_Mobile_edgePreload.js"></script>
+    <script type="text/javascript" charset="utf-8" src="edge_includes/DVD_edgePreload.js"></script>
+    <script type="text/javascript" charset="utf-8" src="edge_includes/Cars_edgePreload.js"></script>
     <style>
-        .edgeLoad-EDGE-30503229, .edgeLoad-EDGE-15320788, .edgeLoad-EDGE-58030357 { visibility:hidden; }
+        .edgeLoad-EDGE-30503229, .edgeLoad-EDGE-15320788, .edgeLoad-EDGE-58030357, .edgeLoad-EDGE-50043193, .edgeLoad-EDGE-15758297 { visibility:hidden; }
     </style>
 <!--Adobe Edge Runtime End-->
 
 </head>
 <body style="margin:0;padding:0;">
+	<div id="header">
+	<h1>Mobile technology.</h1>
+	<h2>An amazing achievement.</h2>
+	<div class="triangle"></div>
+	</div>
 	<div id="Stage1wrap" class="stagewrapper">
 	<div id="Stage1" class="EDGE-30503229">
 	</div>
@@ -27,6 +35,14 @@
 	</div>
 	<div id="Stage3wrap" class="stagewrapper">
 	<div id="Stage3" class="EDGE-58030357">
+	</div>
+	</div>
+	<div id="Stage4wrap" class="stagewrapper">
+	<div id="Stage4" class="EDGE-50043193">
+	</div>
+	</div>
+	<div id="Stage5wrap" class="stagewrapper">
+	<div id="Stage" class="EDGE-15758297">
 	</div>
 	</div>
 </body>
