remove the version # from jquery.qualcomm-reveal.min.js

--- a/modules/mobile-technology-overview/index.html
+++ b/modules/mobile-technology-overview/index.html
@@ -20,7 +20,7 @@
 	
 	<script src="../_common/js/spin.min.js"></script>
 	<script src="../_common/js/jquery.inview.min.js"></script>
-	<script src="../_common/js/jquery.qualcomm-reveal.min-v1.0.1.js"></script>
+	<script src="../_common/js/jquery.qualcomm-reveal.min.js"></script>
 	<script src="edge_includes/edgePreload.js"></script>
 	<script src="edge_includes/SixTechnologies_Mobile_edgePreload.js"></script>
 	<script src="edge_includes/Elite_spaceship_Mobile_edgePreload.js"></script>
