--- a/modules/who-is-qualcomm/video.html
+++ b/modules/who-is-qualcomm/video.html
@@ -4,8 +4,20 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Who is Qualcomm?</title>
+	<script type="text/javascript" src="//cdn.sublimevideo.net/js/77emf89m.js"></script>
+<style type="text/css">
+#what-vid {
+	width: 960px;
+	height: 540px;
+}
+</style>
 </head>
 <body>
-	<iframe id="video" src="http://player.vimeo.com/video/86065129?title=0&amp;byline=0&amp;portrait=0" width="320" height="180" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<div id="what-vid">
+	<video id="3eb3c5c9" class="sublime" poster="img/name-video.jpg" width="640" height="360" data-uid="3eb3c5c9" data-autoresize="fit" preload="none">
+	  <source src="video/evolution_of_a_name_cutdown_640x360.mp4" />
+	  <source src="video/evolution_of_a_name_cutdown_960x540.mp4" data-quality="hd" />
+	</video>
+	</div>
 </body>
 </html>
